src/objects/Product_Interest__c.object
<CustomObject>
    <description>Junction Object to relate Products to Contacts</description>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Product Interests</relationshipLabel>
        <relationshipName>Product_Interests</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Download_Date__c</fullName>
        <description>Date the product was downloaded by the contact</description>
        <label>Download Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MergeId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Merge Id for Upsert</description>
        <externalId>true</externalId>
        <label>MergeId</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Product_Name__c</fullName>
        <formula>Product__r.Name</formula>
        <label>Product Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Product Interests</relationshipLabel>
        <relationshipName>Product_Interests</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Product Interest</label>
    <nameField>
        <displayFormat>PI-{0000}</displayFormat>
        <label>Product Interest Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Interests</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>